--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                           </div>                                   
                 </div>                                
                 <div class="col-md-6">
-                    <img class="img-fluit" src="/img/foto.png" alt="Minha foto de perfil"/>
+                    <img class="img-fluit" src="/img/foto.jpg" alt="Minha foto de perfil"/>
                 </div>
            </div>
         </div>
