--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>   
+    <title>Portfólio</title>   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">    <link rel="stylesheet" href="css/style.css">   
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
     <section id ="nav-bar">
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-               <a class="navbar-brand" type="button" href="#"><img src="./img/imagem.jpg" alt="logo-do-site"></a> 
+               <a class="navbar-brand" type="button" href="#"><img src="./img/logo.jpg" style="border-radius: 5px;" alt="logo-do-site"></a> 
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="toggle Navegations">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -47,22 +47,18 @@
                 <div class="col-md-6">
                     <p class="promo-title">Olá, Sou Leonardo Xavier Full Stack Developer</p>
                     <P>Este é meu Portfólio oficial.
-                        Todos os projetos desenvolvidos serão postados nessa página.</p>                        
-                       <!-- <div class="btn">
-                                <a href="#contato" class="nav-link">Contato</a>
-                                <a href="/download/curriculo.pdf" download="curriculo.pdf" type="application/pdf">Baixar Currículo</a>   
-                            </div>    -->                     
+                        Todos os projetos desenvolvidos serão postados nessa página.</p>                                       
                          <div class="row" style="width: 500px;">
                             <div class="col-6 text-center" >
-                              <button  class="btn btn-warning">Contato</button>
+                              <button href="#contato" class="btn btn-warning" >Contato</button>
                             </div>
                             <div class="col-6 text-center">
-                              <button class="btn btn-warning" >Baixar Currículo</button>
+                              <button class="btn btn-warning" href="/download/curriculo.pdf" download="curriculo.pdf" type="application/pdf" >Baixar Currículo</button>
                             </div>
-                          </div>                                   
+                        </div>                                   
                 </div>                                
                 <div class="col-md-6">
-                    <img class="img-fluit" src="/img/foto.jpg" alt="Minha foto de perfil"/>
+                    <img class="img-fluit" src="img/foto.png" alt="Minha foto de perfil"/>
                 </div>
            </div>
         </div>
@@ -171,26 +167,26 @@
         </div>
         <div class="localizacao">
             <p>Localizção:</p>
-            <img src="/img/localizacao2.png" class="img-logo" alt="imagem de localização.">
+            <img src="img/localizacao2.png" class="img-logo" alt="imagem de localização.">
             <p>Rio de Janeiro - RJ</p>
         </div>
     <section id="contato-link">
     <div class="container">
         <div class="row">
             <div class="col-sm-6 col-md-3">
-                <a href="https://www.linkedin.com/in/leonardoxgarcia/"><img src="/img/linkedin.png" class="img-logo" alt="logo do Linkedin">
+                <a href="https://www.linkedin.com/in/leonardoxgarcia/"><img src="img/linkedin.png" class="img-logo" alt="logo do Linkedin">
                 <div><a class="nav-link-l" href="https://www.linkedin.com/in/leonardoxgarcia/">Linkedin</a></div>
             </div>
             <div class="col-sm-6 col-md-3">
-                    <a href="https://www.github.com/"><img src="/img/git.png" class="img-logo" alt="logo do Github"></a>
+                    <a href="https://www.github.com/"><img src="img/git.png" class="img-logo" alt="logo do Github"></a>
                     <div><a class="nav-link-g" href="#">Github</a></div>              
             </div>
             <div class="col-sm-6 col-md-3">
-                    <a href="https://www.hotmail.com/"><img src="/img/email.png" class="img-logo" alt="logo do email"></a>
+                    <a href="https://www.hotmail.com/"><img src="img/email.png" class="img-logo" alt="logo do email"></a>
                     <div><a class="nav-link-e" href="#">E-mail</a> </div>                    
             </div>
             <div class="col-sm-6 col-md-3">
-                    <a href="#"><img src="/img/wpp.png" class="img-logo" alt="logo do WhatsApp"></a>
+                    <a href="#"><img src="img/wpp.png" class="img-logo" alt="logo do WhatsApp"></a>
                    <div><a class="nav-link-w" href="#">WhatsApp</a></div>               
             </div>
         </div>
@@ -201,7 +197,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-3">
-              <h2>LOGO</h2>
+                <a class="navbar-brand" type="button" href="#"><img src="img/logo.jpg" style="border-radius: 5px;" alt="logo-do-site"></a> 
             </div>
             <div class="col-md-6">
                 <h4>© 2023 Leonardo Xavier Garcia.</h4>
