--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section id="sobre">
         <div class="container-fluid">
             <div class="row">
-                <div class="offset-2 col-8">
+                <div class="col-12">
             <h2 class="sobre">SOBRE</h2>
             <p> Durante minha trajetória acadêmica, tenho me dedicado à formação em Análise e Desenvolvimento de Sistemas e 
                 tive a oportunidade de participar do projeto Programadores Cariocas Full Stack, em parceria com a prefeitura do Rio de Janeiro. 
