--- a/index.html
+++ b/index.html
@@ -173,19 +173,19 @@
     <section id="contato-link">
     <div class="container">
         <div class="row">
-            <div class="col-sm-6 col-md-3">
+            <div class="col-6 col-sm-6 col-md-3">
                 <a href="https://www.linkedin.com/in/leonardoxgarcia/"><img src="img/linkedin.png" class="img-logo" alt="logo do Linkedin">
                 <div><a class="nav-link-l" href="https://www.linkedin.com/in/leonardoxgarcia/">Linkedin</a></div>
             </div>
-            <div class="col-sm-6 col-md-3">
+            <div class="col-6 col-sm-6 col-md-3">
                     <a href="https://www.github.com/"><img src="img/git.png" class="img-logo" alt="logo do Github"></a>
                     <div><a class="nav-link-g" href="#">Github</a></div>              
             </div>
-            <div class="col-sm-6 col-md-3">
+            <div class="col-6 col-sm-6 col-md-3">
                     <a href="https://www.hotmail.com/"><img src="img/email.png" class="img-logo" alt="logo do email"></a>
                     <div><a class="nav-link-e" href="#">E-mail</a> </div>                    
             </div>
-            <div class="col-sm-6 col-md-3">
+            <div class="col-6 col-sm-6 col-md-3">
                     <a href="#"><img src="img/wpp.png" class="img-logo" alt="logo do WhatsApp"></a>
                    <div><a class="nav-link-w" href="#">WhatsApp</a></div>               
             </div>
